JWT Token, Security, DB 등 기본 구조 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=Interview-GO_Backend
 
 # 시크릿 파일 설정
 spring.config.import=application-secret.yml
+
+
+# 구글 TTS TEST
+google.cloud.credentials.location=NONE
