Youtube API연동 성공 및 시큐리티 설정 분리 성공 각종 오류 수정 (안쓰는 파일 주석화 상태)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=Interview-GO_Backend
 
-# 시크릿 파일 설정
-spring.config.import=application-secret.yml
+spring.profiles.include=secret
 
-
-# 구글 TTS TEST
+# êµ¬ê¸ TTS TEST
 google.cloud.credentials.location=NONE
+
+# JWT 관련 필수 설정값들
+jwt.secret=any-random-secret-key-12345
+jwt.expiration=86400000
+
