--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'java'
+	id 'eclipse'
 	id 'org.springframework.boot' version '3.5.9'
 	id 'io.spring.dependency-management' version '1.1.7'
 }
@@ -53,6 +54,11 @@ dependencies {
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.5'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	
+	//Youtube API
+	implementation 'com.google.api-client:google-api-client:2.0.0'
+	implementation 'com.google.apis:google-api-services-youtube:v3-rev20251217-2.0.0'
+	implementation 'com.google.http-client:google-http-client-jackson2:1.43.3'
 }
 
 dependencyManagement {
@@ -64,3 +70,5 @@ dependencyManagement {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+
