--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,19 @@
 spring.application.name=Interview-GO_Backend
 
-# 시크릿 파일 설정
+# ìí¬ë¦¿ íì¼ ì¤ì 
 spring.config.import=application-secret.yml
 
 
-# 구글 TTS TEST
+# êµ¬ê¸ TTS TEST
 google.cloud.credentials.location=NONE
+
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=com.interviewgo.dto
+
+spring.ai.google.genai.project-id=test-project-id
+
+# 구글 AI API 키 (그냥 아무거나)
+spring.ai.google.genai.api-key=test-api-key
+
+# 지역 설정 (미국 등 아무데나)
+spring.ai.google.genai.location=us-central1
