유튜브 정보 테이블에 값 저장하는 기능 제작 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=Interview-GO_Backend
 
+mybatis.mapper-locations=classpath:mapper/youtube.xml
+
 spring.profiles.include=secret
 
 # êµ¬ê¸ TTS TEST
@@ -8,4 +10,7 @@ google.cloud.credentials.location=NONE
 # JWT 관련 필수 설정값들
 jwt.secret=any-random-secret-key-12345
 jwt.expiration=86400000
+
+# DTO 클래스들이 모여있는 패키지 경로를 알려줘야 @Alias가 작동합니다.
+mybatis.type-aliases-package=com.interviewgo.dto
 
