AI 작업 1차 백업 커밋 (DAO, DTO, Service, Mapper, Util, Controller, Security-임시 비활성 등 작업)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=Interview-GO_Backend
 
-# 시크릿 파일 설정
+# Secret Data
 spring.config.import=application-secret.yml
 
+# mybatis
+mybatis.type-aliases-package=com.interviewgo.dto
+mybatis.mapper-locations=classpath:/mapper/**/*.xml
 
-# 구글 TTS TEST
+# TTS TEST
 google.cloud.credentials.location=NONE
