--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Interview-GO_Backend
 
-mybatis.mapper-locations=classpath:mapper/youtube.xml
+mybatis.mapper-locations=classpath:mapper/*.xml
 
 spring.profiles.include=secret
 
