--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 spring.application.name=Interview-GO_Backend
 
-# 시크릿 파일 설정
+# ìí¬ë¦¿ íì¼ ì¤ì 
 spring.config.import=application-secret.yml
 
 
-# 구글 TTS TEST
+# êµ¬ê¸ TTS TEST
 google.cloud.credentials.location=NONE
+
+# XML 파일이 위치한 폴더 지정 (src/main/resources/mapper 폴더 기준)
+mybatis.mapper-locations=classpath:mapper/*.xml
+
+# DTO 패키지 단축어 설정 (선택사항, 설정 시 parameterType에 풀경로 대신 MemberDTO만 써도 됨)
+mybatis.type-aliases-package=com.interviewgo.dto
