사용자 프로필 사진 업로드 삭제 및 사용자 기본 아이콘 추가, 회원 탈퇴 시 기록 삭

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,17 +3,10 @@ spring.application.name=Interview-GO_Backend
 # ìí¬ë¦¿ íì¼ ì¤ì 
 spring.config.import=application-secret.yml
 
-
 # êµ¬ê¸ TTS TEST
 google.cloud.credentials.location=NONE
 
+# mybatis
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.interviewgo.dto
 
-spring.ai.google.genai.project-id=test-project-id
-
-# 구글 AI API 키 (그냥 아무거나)
-spring.ai.google.genai.api-key=test-api-key
-
-# 지역 설정 (미국 등 아무데나)
-spring.ai.google.genai.location=us-central1
