--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,10 @@ dependencies {
 	implementation 'com.google.api-client:google-api-client:2.0.0'
 	implementation 'com.google.apis:google-api-services-youtube:v3-rev20251217-2.0.0'
 	implementation 'com.google.http-client:google-http-client-jackson2:1.43.3'
+	
+	// json으로 변경 
+	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.15.2'
+ 
 }
 
 dependencyManagement {
