--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.application.name=Interview-GO_Backend
 # 시크릿 파일 설정
 spring.config.import=application-secret.yml
 
+# mybatis
+mybatis.type-aliases-package=com.interviewgo.dto
+mybatis.mapper-locations=classpath:/mapper/**/*.xml
 
-# 구글 TTS TEST
+# TTS TEST
 google.cloud.credentials.location=NONE
