코드 최적화 백업 커밋 1. mapper의 잘못된 위치 수정 2. controller가 service의 역할 수행하는 것 일부 수정 3. service의 map return을 builder + dto로 수정하여 코드 간소화

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,8 @@
 spring.application.name=Interview-GO_Backend
 
-# ìí¬ë¦¿ íì¼ ì¤ì 
+# Spring Securiy
 spring.config.import=application-secret.yml
 
-# êµ¬ê¸ TTS TEST
-google.cloud.credentials.location=NONE
-
-# mybatis
+# Mybatis
 mybatis.mapper-locations=classpath:mapper/**/*.xml
 mybatis.type-aliases-package=com.interviewgo.dto
