--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Interview-GO_Backend
 
 # Spring Securiy
-spring.config.import=application-secret.yml
+spring.config.import=optional:classpath:application-secret.yml
 
 # Mybatis
 mybatis.mapper-locations=classpath:mapper/**/*.xml
